fix: 불변리스트 => 변경 가능한 리스트로 변경